globus-gsi-proxy-core (8.2-1+gt6.@distro@) @distro@; urgency=low

  * Fix path length constraint handling

 -- Globus Toolkit <support@globus.org>  Tue, 30 Aug 2016 09:02:48 -0400

globus-gsi-proxy-core (8.1-1+gt6.@distro@) @distro@; urgency=low

  * Fix conditional for 1.0.1

 -- Globus Toolkit <support@globus.org>  Thu, 18 Aug 2016 15:39:16 -0400

globus-gsi-proxy-core (8.0-1+gt6.@distro@) @distro@; urgency=low

  * Support for OpenSSL 1.1.0

 -- Globus Toolkit <support@globus.org>  Tue, 16 Aug 2016 14:01:40 -0400

globus-gsi-proxy-core (7.9-1+gt6.@distro@) @distro@; urgency=low

  * Fix missing ;

 -- Globus Toolkit <support@globus.org>  Fri, 04 Dec 2015 11:18:16 -0500

globus-gsi-proxy-core (7.8-1+gt6.@distro@) @distro@; urgency=low

  * Change default proxy_req type to RFC

 -- Globus Toolkit <support@globus.org>  Fri, 04 Dec 2015 10:21:17 -0500

globus-gsi-proxy-core (7.7-1+gt6.@distro@) @distro@; urgency=low

  * Include more manpages for API
  * Doxygen markup fixes
  * Fix typos and clarify some documentation
  * Quiet some autoconf/automake warnings

 -- Globus Toolkit <support@globus.org>  Thu, 25 Sep 2014 12:09:44 -0400

globus-gsi-proxy-core (7.6-1+gt6.@distro@) @distro@; urgency=low

  * Merge fixes from ellert-globus_6_branch

 -- Globus Toolkit <support@globus.org>  Fri, 22 Aug 2014 16:29:29 -0400

globus-gsi-proxy-core (7.5-3+gt6.@distro@) @distro@; urgency=low

  * Fix Source path

 -- Globus Toolkit <support@globus.org>  Wed, 20 Aug 2014 15:42:40 -0400

globus-gsi-proxy-core (7.5-2+gt6.@distro@) @distro@; urgency=low

  * Rename dbg packages

 -- Globus Toolkit <support@globus.org>  Wed, 18 Jun 2014 14:38:44 -0400

globus-gsi-proxy-core (7.5-1+gt6.@distro@) @distro@; urgency=low

  * Merge changes from Mattias Ellert

 -- Globus Toolkit <support@globus.org>  Mon, 09 Jun 2014 14:39:43 -0400

globus-gsi-proxy-core (7.4-1+gt6.@distro@) @distro@; urgency=low

  * Version bump for consistency
